2005-07-13  Sven Neumann  <sven@gimp.org>

	* app/base/Makefile.am
	* app/base/segmentator.[ch]: renamed to siox.[ch].

	* app/base/siox.[ch]: added API docs and a link to the algorithm's
	new homepage. Removed unused code.

	* app/core/gimpdrawable-foreground-extract.c: changed accordingly.

2005-07-13  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppalette.c (gimp_palette_add_entry): actually return
	the added entry, and not always the palette's last entry (argh!).

	* app/widgets/gimppaletteeditor.c: make sure the cursor is always
	on the newly added color. Really fixes #15060 this time.

2005-07-13  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.[ch]: added smooth_region(), a
	simple convolution filter to smooth a mask.

	* app/base/segmentator.c (smooth_mask): use the new function.

2005-07-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdockable.[ch]: added new public function
	gimp_dockable_blink_cancel() which stops title blinking.

	* app/tools/gimpcolorpickertool.c (gimp_color_picker_tool_picked):
	cancel blinking when updating a picked color so the dockable
	doesn't flicker for each cursor movement.

2005-07-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppaletteeditor.c (gimp_palette_editor_pick_color):
	add colors after the cursor. Fixes bug #150608.

2005-07-13  Michael Natterer  <mitch@gimp.org>

	* app/pdb/procedural_db.c (procedural_db_init_procs): sorted list
	of deprecated procedures so deprecations since 2.0 and 2.2 are
	grouped together.

2005-07-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu.c: formatting.

2005-07-12  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-edit.c: pass opacity and paint_mode to
	gimp_edit_fill_internal() instead of figuring them in the
	function.

2005-07-12  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpitem.[ch]: removed "context" parameter from
	GimpItem::stroke(), it's not needed any longer.

	* app/core/gimpchannel.c